Update word2vec.md
Former-commit-id: 50f11766b0ad53ed217b4250eb0779f6a340f086